# mural

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  mural-prompt.md  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  release.yml
docs/: .nojekyll  README.md  _config.yml  index.html
docs/assets/: app.js  style.css
packaging/homebrew/: mural.rb
packaging/macports/: Portfile
scripts/: gen-samples.mjs  gen-themes.mjs  render-icons.mjs
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/resources/themes/builtin/: ayu-dark.toml  ayu-light.toml  ayu-mirage.toml  catppuccin-frappe.toml  catppuccin-latte.toml  catppuccin-macchiato.toml  catppuccin-mocha.toml  dracula.toml  everforest-dark-hard.toml  everforest-dark-medium.toml  everforest-dark-soft.toml  everforest-light-hard.toml  everforest-light-medium.toml  everforest-light-soft.toml  github-dark.toml  github-dimmed.toml  github-light.toml  gruvbox-dark-hard.toml  gruvbox-dark-medium.toml  gruvbox-dark-soft.toml  gruvbox-light-hard.toml  gruvbox-light-medium.toml  gruvbox-light-soft.toml  kanagawa-dragon.toml  kanagawa-lotus.toml  kanagawa-wave.toml  material-darker.toml  material-deep-ocean.toml  material-lighter.toml  material-palenight.toml  monokai-pro.toml  nord-frost.toml  nord-polar-night.toml  nord-snow-storm.toml  nord.toml  one-dark.toml  one-light.toml  rose-pine-dawn.toml  rose-pine-moon.toml  rose-pine.toml  (+6 more)
src-tauri/src/: colors.rs  commands.rs  config.rs  fonts.rs  hotkey.rs  lib.rs  location.rs  main.rs  popover.rs  rotate.rs  samples.rs  scan.rs  state.rs  theme.rs  thumbs.rs  tray.rs
src-tauri/src/sources/: github.rs  local.rs  mod.rs
src-tauri/src/wallpaper/: image.rs  lock_screen.rs  mod.rs  per_space.rs  video.rs
src-tauri/tests/: scan_integration.rs
src/lib/: colors.ts  format.ts  ipc.ts  store.ts  theme.ts
src/onboarding/: Onboarding.tsx
src/popover/: DisplayTabs.tsx  Popover.tsx  Searchbar.tsx  ThumbGrid.tsx  ThumbList.tsx
src/settings/: Settings.tsx  ThemePreview.tsx
src/settings/sections/: About.tsx  Appearance.tsx  AutoRotate.tsx  Display.tsx  General.tsx  Layout.tsx  Sources.tsx
src/styles/: globals.css
