[package]
name = "mural"
version = "0.1.0-beta.1"
description = "Mural — macOS wallpaper picker"
authors = ["Mural Contributors"]
license = "GPL-3.0-only"
repository = "https://github.com/Fiojf/mural"
edition = "2021"
rust-version = "1.77"

[lib]
name = "mural_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-os = "2"
tauri-plugin-shell = "2"
tauri-plugin-single-instance = "2"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
anyhow = "1"

tokio = { version = "1", default-features = false, features = ["rt-multi-thread", "sync", "time", "macros"] }

dirs = "5"
walkdir = "2"
notify = "7"
notify-debouncer-full = "0.4"

image = { version = "0.25", default-features = false, features = ["jpeg", "png", "gif", "bmp", "tiff", "webp"] }
webp = "0.3"
blake3 = "1"
sha2 = "0.10"
hex = "0.4"

global-hotkey = "0.6"
sunrise = "3"
chrono = { version = "0.4", default-features = false, features = ["std", "clock", "serde"] }
rand = "0.8"
parking_lot = "0.12"

git2 = { version = "0.19", default-features = false, features = ["vendored-libgit2", "vendored-openssl"] }
url = "2"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[dev-dependencies]
tempfile = "3"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-foundation = { version = "0.3", default-features = false, features = [
  "std",
  "NSURL",
  "NSString",
  "NSDictionary",
  "NSError",
  "NSValue",
  "NSGeometry",
  "NSObject",
] }
objc2-app-kit = { version = "0.3", default-features = false, features = [
  "std",
  "NSWorkspace",
  "NSWindow",
  "NSScreen",
] }

[features]
custom-protocol = ["tauri/custom-protocol"]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = 3
strip = true

# Speed up release builds of dependencies that hit our hot paths (image
# decode/encode, blake3 hashing) without paying the full release-build cost
# on Mural's own crates during iteration.
[profile.dev.package."*"]
opt-level = 2

[[bin]]
name = "mural"
path = "src/main.rs"
